# UNLZ_Llamacode

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  LlamaCode.lnk  README.en.md  README.md  TODO.md  agent_todo.md  build.bat  build_auto.bat  build_log.txt  bump-version.bat  install.bat  setup.bat  tests.bat  update-shortcut.ps1
assets/benchmarks/: local_cookbook_priorities.json
assets/benchmarks/custom/: 0e7b16b9-e7b2-402c-a757-5e8d1246921f.json  17f93d85-2b5f-4766-8451-7334e00dd9a6.json  1800a221-5c90-4ece-8186-c36466d9468c.json  32056a5f-d6df-4b1a-ac44-1528ef8cafdc.json  32281c9d-3dbf-4e0d-8288-99f2635f53b8.json  b4a7eac4-26f2-4ad8-9d7b-6a52982b2e1c.json  de2db2f7-a4df-4f55-843b-42756694c103.json  f779d1cb-0a6f-4c31-ba9a-54b640209b9b.json  llamacode_local_coding_smoke.json  stress-largo-dificil-python-v1.json  stress-largo-python-profesional-v1.json
assets/update/: latest.json
build2/: ALL_BUILD.vcxproj  CMakeCache.txt  LlamaCode.sln  LlamaCode.vcxproj  LlamaCode.vcxproj.filters  LlamaCode_autogen.vcxproj  LlamaCode_autogen.vcxproj.filters  LlamaCode_automoc_json_extraction.vcxproj  LlamaCode_automoc_json_extraction.vcxproj.filters  LlamaCode_copy_qml.vcxproj  LlamaCode_copy_qml.vcxproj.filters  LlamaCode_copy_res.vcxproj  LlamaCode_copy_res.vcxproj.filters  LlamaCode_qmlimportscan.vcxproj  LlamaCode_qmlimportscan.vcxproj.filters  LlamaCode_qmllint.vcxproj  LlamaCode_qmllint.vcxproj.filters  LlamaCode_qmllint_json.vcxproj  LlamaCode_qmllint_json.vcxproj.filters  LlamaCode_qmllint_module.vcxproj  LlamaCode_qmllint_module.vcxproj.filters  LlamaCode_qmltyperegistration.vcxproj  LlamaCode_qmltyperegistration.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  all_aotstats.vcxproj  all_aotstats.vcxproj.filters  all_qmllint.vcxproj  all_qmllint.vcxproj.filters  all_qmllint_json.vcxproj  all_qmllint_json.vcxproj.filters  all_qmllint_module.vcxproj  all_qmllint_module.vcxproj.filters  all_qmltyperegistrations.vcxproj  cmake_install.cmake  module_LlamaCode_aotstats_target.vcxproj  module_LlamaCode_aotstats_target.vcxproj.filters
build2/.qt/: LlamaCode_qml.cmake  LlamaCode_res.cmake  QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
build2/.qt/deploy_qml_imports/: LlamaCode-Debug.cmake
build2/.qt/qml_imports/: LlamaCode_build.cmake  LlamaCode_build.rsp  LlamaCode_conf.rsp
build2/.qt/rcc/: LlamaCode_raw_qml_0.qrc  llamacode_assets.qrc  qmake_LlamaCode.qrc  qrc_LlamaCode_raw_qml_0.cpp  qrc_llamacode_assets.cpp  qrc_qmake_LlamaCode.cpp
build2/.rcc/qmlcache/: LlamaCode_qml_loader_file_list.rsp  LlamaCode_qmlcache_loader.cpp  all_aotstats.aotstatslist  module_LlamaCode.aotstatslist
build2/.rcc/qmlcache/LlamaCode_qml/: Main_qml.cpp  Main_qml.cpp.aotstats
build2/.rcc/qmllint/: LlamaCode.rsp  LlamaCode_json.rsp  LlamaCode_module.rsp
build2/Debug/: LlamaCode.exp  LlamaCode.lib
build2/LlamaCode/: LlamaCode_qml_module_dir_map.qrc  qmldir
build2/LlamaCode.dir/Debug/: LlamaCode.exe.recipe  app_icon.res
build2/LlamaCode.dir/Debug/LlamaCode.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
build2/LlamaCode/qml/components/: LcButton.qml  LcDialog.qml  LcTextField.qml
build2/LlamaCode/qml/pages/: ProfilesPage.qml
build2/LlamaCode_autogen/: mocs_compilation_Debug.cpp
build2/LlamaCode_autogen/include_Debug/PRMOGMWJPH/: moc_BinaryRegistry.cpp  moc_BinaryRegistry.cpp.d  moc_BinaryRegistry.cpp.json  moc_GGUFScanner.cpp  moc_GGUFScanner.cpp.d  moc_GGUFScanner.cpp.json  moc_ModelCatalog.cpp  moc_ModelCatalog.cpp.d  moc_ModelRootRegistry.cpp  (+2 more)
build2/meta_types/: LlamaCode_json_file_list.txt  LlamaCode_json_file_list.txt.timestamp  qt6llamacode_metatypes.json.gen
build2/qmltypes/: LlamaCode_foreign_types.txt
docs/: benchmark_improvements.md  tuner.md
qml/: Main.qml
qml/components/: CommandPreview.qml  NavBar.qml  PageHeader.qml
qml/pages/: AgentPage.qml  BenchmarkPage.qml  BinariesPage.qml  CharlaPage.qml  ChatPage.qml  LaunchPage.qml  ModelRootsPage.qml  ProfilesPage.qml  ResearchPage.qml  SettingsPage.qml
scripts/: bootstrap.ps1
src/: AppController.cpp  AppController.h  main.cpp  main_test.cpp
src/core/: BinaryRegistry.cpp  BinaryRegistry.h  CapabilityDetector.cpp  CapabilityDetector.h  CatalogModel.cpp  CatalogModel.h  ControlApi.cpp  ControlApi.h  GGUFScanner.cpp  GGUFScanner.h  LlamaBinary.cpp  LlamaBinary.h  MermaidRenderer.cpp  MermaidRenderer.h  ModelCatalog.cpp  ModelCatalog.h  ModelRoot.cpp  ModelRoot.h  ModelRootRegistry.cpp  ModelRootRegistry.h
src/core/agent/: AgentToolRunner.cpp  AgentToolRunner.h  GraphStore.cpp  GraphStore.h  IAgentBackend.h  LlamaAgentBackend.cpp  LlamaAgentBackend.h  MasterCli.cpp  MasterCli.h  MemoryStore.cpp  MemoryStore.h  RawChatBackend.cpp  RawChatBackend.h  SubAgentRunner.cpp
src/core/mail/: MailClient.cpp  MailClient.h
src/core/profiles/: EffectiveProfileBuilder.cpp  EffectiveProfileBuilder.h  ProfileManager.cpp  ProfileManager.h  ProfileTypes.cpp  ProfileTypes.h
src/core/tuner/: AutoTuner.cpp  AutoTuner.h  TunerEngine.cpp  TunerEngine.h
src/core/voice/: AudioCodec.cpp  AudioCodec.h  SttEngine.cpp  SttEngine.h  TtsEngine.cpp  TtsEngine.h  VoiceController.cpp  VoiceController.h  VoiceTypes.cpp  VoiceTypes.h
tests/: test_agent_tools.cpp  test_appcontroller.cpp  test_backends_net.cpp  test_capability.cpp  test_catalog.cpp  test_control_api.cpp  test_document_extractor.cpp  test_eval.cpp  test_gguf_profiles.cpp  test_mail.cpp  test_master_cli.cpp  test_memory_graph.cpp  test_mermaid.cpp  test_profiles.cpp  test_registries.cpp  test_tuner.cpp  test_voice.cpp
tools/: _pid.txt  build_tuner_tests.ps1  tuner_engine_selftest.cpp  tuner_selftest.cpp
(+51 files in other folders)
